--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,12 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.b.test5.Main2Activity">
 
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.example.b.test5.Fragment2"
-        android:id="@+id/fragment2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment2Frame">
+    </FrameLayout>
 </RelativeLayout>
